// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`firewall.sh generated rules boot in redirect mode restores learned addresses minus the time spent down 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m set ! --match-set XRAYUI_PROXY4 dst -m set ! --match-set XRAYUI_PROXY4_NET dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4 dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4_NET dst -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== ipset entries
XRAYUI_PROXY4 198.51.100.20 timeout 2000
== learned file
# 999000
XRAYUI_PROXY4 198.51.100.20 3000
XRAYUI_PROXY4 198.51.100.21 500
XRAYUI_PROXY6 2001:db8::1 3000
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules cleanup after a dual-stack configure 1`] = `
"== iptables -t mangle
-N DIVERT
== ip6tables -t mangle
-N DIVERT
== events
dnsmasq_restart
dnsmasq_restart
== messages
WARN: DNS leak lock requested (xray_dns_only=true, dns wiring=false) but no dedicated DNS inbound found; skipping firewall lock to avoid breaking name resolution
== stderr
"
`;

exports[`firewall.sh generated rules cleanup in bypass mode drops saved learned addresses 1`] = `
"== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules cleanup when only ipv4 still has the hooks 1`] = `
"== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules cleanup while dnsmasq lacks the xrayui block 1`] = `
"== stderr
"
`;

exports[`firewall.sh generated rules dns leak lock with a dedicated DNS inbound 1`] = `
"== iptables -t filter
-N XRAYUI
-N XRAYUI_DNS_LOCK
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI_DNS_LOCK
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
-A XRAYUI_DNS_LOCK -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI_DNS_LOCK -p udp --dport 53 -j DROP
-A XRAYUI_DNS_LOCK -p tcp --dport 53 -j DROP
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== messages
WARN: DNS leak lock: Xray runs as root, so a uid-owner exemption would also exempt every other router process; locking FORWARD only so Xray can resolve proxy node domains. Router-originated DNS is not force-locked.
== stderr
"
`;

exports[`firewall.sh generated rules firewall hook while dnsmasq already has the xrayui block 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m set ! --match-set XRAYUI_PROXY4 dst -m set ! --match-set XRAYUI_PROXY4_NET dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4 dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4_NET dst -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== stderr
"
`;

exports[`firewall.sh generated rules firewall hook while dnsmasq lacks the xrayui block 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m set ! --match-set XRAYUI_PROXY4 dst -m set ! --match-set XRAYUI_PROXY4_NET dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4 dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4_NET dst -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules ipv4 hooks were wiped by the firmware while ipv6 kept them 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip6tables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== ip6tables -t nat
-N XRAYUI
== ip6tables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -d ff00::/8 -j RETURN
-A XRAYUI -p icmpv6 -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 2001:db8:1::/64 -j RETURN
-A XRAYUI -d fe80::/64 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 2001:db8:1::1 -j RETURN
-A XRAYUI -d 2001:db8:ffff::2 -j RETURN
-A XRAYUI -s 2001:db8:1::/64 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s fe80::/64 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 2001:db8:1::/64 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s fe80::/64 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ip -6 rule
fwmark 0x10000/0x10000 lookup 77
== ip -6 route table 77
local default dev lo proto static
2001:db8:1::/64 dev br0 proto kernel metric 256 pref medium
2001:db8:ffff::/64 dev eth0 proto kernel metric 256 pref medium
fe80::/64 dev br0 proto kernel metric 256 pref medium
fe80::/64 dev eth0 proto kernel metric 256 pref medium
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
XRAYUI_BYPASS6 hash:net inet6 timeout 86400
XRAYUI_BYPASS6_NET hash:net inet6
XRAYUI_PROXY6 hash:net inet6 timeout 86400
XRAYUI_PROXY6_NET hash:net inet6
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules loopback listener that is not the last dokodemo inbound 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
-A PREROUTING -j XRAYUI
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -s 192.168.1.0/24 -p tcp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -s 192.168.101.0/24 -p tcp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -s 10.8.0.0/24 -p udp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -s 192.168.1.0/24 -p udp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -s 192.168.101.0/24 -p udp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -p tcp -m conntrack --ctstate ESTABLISHED,RELATED -j RETURN
-A XRAYUI -j RETURN
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12346 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12346 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12346 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12346 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12346 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12346 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12346 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12346 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
set_route_localnet 1
dnsmasq_restart
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules policy: bypass everyone except twenty tcp ports 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -m multiport --dports 10001,10002,10003,10004,10005,10006,10007,10008,10009,10010,10011,10012,10013,10014,10015 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p tcp -m multiport --dports 10016,10017,10018,10019,10020 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p tcp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -p tcp -m multiport --dports 10001,10002,10003,10004,10005,10006,10007,10008,10009,10010,10011,10012,10013,10014,10015 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -m multiport --dports 10016,10017,10018,10019,10020 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -p tcp -m multiport --dports 10001,10002,10003,10004,10005,10006,10007,10008,10009,10010,10011,10012,10013,10014,10015 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -m multiport --dports 10016,10017,10018,10019,10020 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p udp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -p udp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -p udp -j RETURN
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules policy: bypass everyone except web ports 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -m multiport --dports 443,80,22 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p tcp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -p tcp -m multiport --dports 443,80,22 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -p tcp -m multiport --dports 443,80,22 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p udp -m multiport --dports 443,22 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -p udp -m multiport --dports 443,22 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -p udp -m multiport --dports 443,22 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j RETURN
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules policy: bypass everyone next to a redirect everyone policy 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -m multiport --dports 443 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p tcp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -p tcp -m multiport --dports 443 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -p tcp -m multiport --dports 443 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p udp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -p udp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -p udp -j RETURN
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== messages
WARN: Skipping policy redirect policy: all-devices policies must share one mode (bypass), protocol: tcp
WARN: Skipping policy redirect policy: all-devices policies must share one mode (bypass), protocol: udp
== stderr
"
`;

exports[`firewall.sh generated rules policy: bypass one device entirely 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p tcp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p tcp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p tcp -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p udp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p udp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p udp -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules policy: bypass one device except https 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p tcp -m multiport --dports 443 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p tcp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p tcp -m multiport --dports 443 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p tcp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p tcp -m multiport --dports 443 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p tcp -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p udp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p udp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:02 -p udp -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules policy: disabled policies fall back to redirecting everything 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules policy: redirect one device except mail ports 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -m multiport --dports 25,465 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -m multiport --dports 25,465 -j RETURN
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -m multiport --dports 25,465 -j RETURN
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules policy: redirect one device plus everyone except port 25 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p tcp -m multiport --dports 25 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -m multiport --dports 25 -j RETURN
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -m multiport --dports 25 -j RETURN
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules policy: redirect only one device 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -m mac --mac-source AA:BB:CC:DD:EE:01 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules policy: two bypass everyone policies, udp voice first then web ports 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -m multiport --dports 22,80,443,8443 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p tcp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -p tcp -m multiport --dports 22,80,443,8443 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -p tcp -m multiport --dports 22,80,443,8443 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p udp -m multiport --dports 443,19294:19344,50000:50100,22,17003 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j RETURN
-A XRAYUI -s 192.168.1.0/24 -p udp -m multiport --dports 443,19294:19344,50000:50100,22,17003 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j RETURN
-A XRAYUI -s 192.168.101.0/24 -p udp -m multiport --dports 443,19294:19344,50000:50100,22,17003 -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j RETURN
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules reconfigure in redirect mode leaves live learned addresses alone 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m set ! --match-set XRAYUI_PROXY4 dst -m set ! --match-set XRAYUI_PROXY4_NET dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4 dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4_NET dst -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4_NET hash:net inet
== ipset entries
XRAYUI_PROXY4 198.51.100.20 timeout 86000
== learned file
# 999000
XRAYUI_PROXY4 198.51.100.20 3000
XRAYUI_PROXY4 198.51.100.22 3000
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules redirect dual-stack with a loopback listener 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
-A PREROUTING -j XRAYUI
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -s 192.168.1.0/24 -p tcp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -s 192.168.101.0/24 -p tcp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -s 10.8.0.0/24 -p udp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -s 192.168.1.0/24 -p udp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -s 192.168.101.0/24 -p udp -j DNAT --to-destination 127.0.0.1:12345
-A XRAYUI -p tcp -m conntrack --ctstate ESTABLISHED,RELATED -j RETURN
-A XRAYUI -j RETURN
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip6tables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j ACCEPT
-A XRAYUI -j RETURN
== ip6tables -t nat
-N XRAYUI
-A PREROUTING -j XRAYUI
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -d 2001:db8:1::/64 -j RETURN
-A XRAYUI -d fe80::/64 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -s 2001:db8:1::/64 -p tcp -j DNAT --to-destination ::1:12345
-A XRAYUI -s fe80::/64 -p tcp -j DNAT --to-destination ::1:12345
-A XRAYUI -s 2001:db8:1::/64 -p udp -j DNAT --to-destination ::1:12345
-A XRAYUI -s fe80::/64 -p udp -j DNAT --to-destination ::1:12345
-A XRAYUI -p tcp -m conntrack --ctstate ESTABLISHED,RELATED -j RETURN
-A XRAYUI -j RETURN
== ip6tables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
XRAYUI_BYPASS6 hash:net inet6 timeout 86400
XRAYUI_BYPASS6_NET hash:net inet6
XRAYUI_PROXY6 hash:net inet6 timeout 86400
XRAYUI_PROXY6_NET hash:net inet6
== events
set_route_localnet 1
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules redirect with a server inbound on 443 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 443 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 443 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
-A PREROUTING -j XRAYUI
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 443 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 443 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j REDIRECT --to-ports 12345
-A XRAYUI -s 192.168.1.0/24 -p tcp -j REDIRECT --to-ports 12345
-A XRAYUI -s 192.168.101.0/24 -p tcp -j REDIRECT --to-ports 12345
-A XRAYUI -s 10.8.0.0/24 -p udp -j REDIRECT --to-ports 12345
-A XRAYUI -s 192.168.1.0/24 -p udp -j REDIRECT --to-ports 12345
-A XRAYUI -s 192.168.101.0/24 -p udp -j REDIRECT --to-ports 12345
-A XRAYUI -p tcp -m conntrack --ctstate ESTABLISHED,RELATED -j RETURN
-A XRAYUI -j RETURN
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules redirect with ipset redirect mode dual-stack 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
-A PREROUTING -j XRAYUI
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m set ! --match-set XRAYUI_PROXY4 dst -m set ! --match-set XRAYUI_PROXY4_NET dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4 dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4_NET dst -j RETURN
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j REDIRECT --to-ports 12345
-A XRAYUI -s 192.168.1.0/24 -p tcp -j REDIRECT --to-ports 12345
-A XRAYUI -s 192.168.101.0/24 -p tcp -j REDIRECT --to-ports 12345
-A XRAYUI -s 10.8.0.0/24 -p udp -j REDIRECT --to-ports 12345
-A XRAYUI -s 192.168.1.0/24 -p udp -j REDIRECT --to-ports 12345
-A XRAYUI -s 192.168.101.0/24 -p udp -j REDIRECT --to-ports 12345
-A XRAYUI -p tcp -m conntrack --ctstate ESTABLISHED,RELATED -j RETURN
-A XRAYUI -j RETURN
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip6tables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j ACCEPT
-A XRAYUI -j RETURN
== ip6tables -t nat
-N XRAYUI
-A PREROUTING -j XRAYUI
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m set ! --match-set XRAYUI_PROXY6 dst -m set ! --match-set XRAYUI_PROXY6_NET dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS6 dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS6_NET dst -j RETURN
-A XRAYUI -d 2001:db8:1::/64 -j RETURN
-A XRAYUI -d fe80::/64 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -s 2001:db8:1::/64 -p tcp -j REDIRECT --to-ports 12345
-A XRAYUI -s fe80::/64 -p tcp -j REDIRECT --to-ports 12345
-A XRAYUI -s 2001:db8:1::/64 -p udp -j REDIRECT --to-ports 12345
-A XRAYUI -s fe80::/64 -p udp -j REDIRECT --to-ports 12345
-A XRAYUI -p tcp -m conntrack --ctstate ESTABLISHED,RELATED -j RETURN
-A XRAYUI -j RETURN
== ip6tables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
XRAYUI_BYPASS6 hash:net inet6 timeout 86400
XRAYUI_BYPASS6_NET hash:net inet6
XRAYUI_PROXY6 hash:net inet6 timeout 86400
XRAYUI_PROXY6_NET hash:net inet6
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules restart in redirect mode carries learned addresses over 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m set ! --match-set XRAYUI_PROXY4 dst -m set ! --match-set XRAYUI_PROXY4_NET dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4 dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4_NET dst -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== ipset entries
XRAYUI_PROXY4 198.51.100.10 timeout 5000
XRAYUI_PROXY4 198.51.100.11 timeout 86400
== learned file
# 1000000
XRAYUI_PROXY4 198.51.100.10 5000
XRAYUI_PROXY4 198.51.100.11 86400
== events
dnsmasq_restart
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules stale ipv4 rules while the ipv6 chain is missing 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip6tables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== ip6tables -t nat
-N XRAYUI
== ip6tables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -d ff00::/8 -j RETURN
-A XRAYUI -p icmpv6 -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 2001:db8:1::/64 -j RETURN
-A XRAYUI -d fe80::/64 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 2001:db8:1::1 -j RETURN
-A XRAYUI -d 2001:db8:ffff::2 -j RETURN
-A XRAYUI -s 2001:db8:1::/64 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s fe80::/64 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 2001:db8:1::/64 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s fe80::/64 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ip -6 rule
fwmark 0x10000/0x10000 lookup 77
== ip -6 route table 77
local default dev lo proto static
2001:db8:1::/64 dev br0 proto kernel metric 256 pref medium
2001:db8:ffff::/64 dev eth0 proto kernel metric 256 pref medium
fe80::/64 dev br0 proto kernel metric 256 pref medium
fe80::/64 dev eth0 proto kernel metric 256 pref medium
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
XRAYUI_BYPASS6 hash:net inet6 timeout 86400
XRAYUI_BYPASS6_NET hash:net inet6
XRAYUI_PROXY6 hash:net inet6 timeout 86400
XRAYUI_PROXY6_NET hash:net inet6
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules tproxy dual-stack with a server inbound on 443 and QUIC blocking 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 443 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 443 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 443 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 443 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp --dport 443 -j DROP
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp --dport 443 -j DROP
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp --dport 443 -j DROP
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip6tables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 443 -j ACCEPT
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 443 -j ACCEPT
-A XRAYUI -j RETURN
== ip6tables -t nat
-N XRAYUI
== ip6tables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -d ff00::/8 -j RETURN
-A XRAYUI -p icmpv6 -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 2001:db8:1::/64 -j RETURN
-A XRAYUI -d fe80::/64 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 2001:db8:1::1 -j RETURN
-A XRAYUI -d 2001:db8:ffff::2 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 443 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 443 -j RETURN
-A XRAYUI -s 2001:db8:1::/64 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s fe80::/64 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 2001:db8:1::/64 -p udp --dport 443 -j DROP
-A XRAYUI -s 2001:db8:1::/64 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s fe80::/64 -p udp --dport 443 -j DROP
-A XRAYUI -s fe80::/64 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ip -6 rule
fwmark 0x10000/0x10000 lookup 77
== ip -6 route table 77
local default dev lo proto static
2001:db8:1::/64 dev br0 proto kernel metric 256 pref medium
2001:db8:ffff::/64 dev eth0 proto kernel metric 256 pref medium
fe80::/64 dev br0 proto kernel metric 256 pref medium
fe80::/64 dev eth0 proto kernel metric 256 pref medium
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
XRAYUI_BYPASS6 hash:net inet6 timeout 86400
XRAYUI_BYPASS6_NET hash:net inet6
XRAYUI_PROXY6 hash:net inet6 timeout 86400
XRAYUI_PROXY6_NET hash:net inet6
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules tproxy with a tcp-only inbound 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules tproxy with default policy 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules tproxy with ipset bypass mode 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4 dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4_NET dst -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules tproxy with ipset redirect mode and QUIC blocking 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m set ! --match-set XRAYUI_PROXY4 dst -m set ! --match-set XRAYUI_PROXY4_NET dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4 dst -j RETURN
-A XRAYUI -m set --match-set XRAYUI_BYPASS4_NET dst -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp --dport 443 -j DROP
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp --dport 443 -j DROP
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp --dport 443 -j DROP
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules tproxy with split tcp and udp inbounds 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12346 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12346 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12346 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12346 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12346 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== stderr
"
`;

exports[`firewall.sh generated rules tun inbound next to tproxy 1`] = `
"== iptables -t filter
-N XRAYUI
-A INPUT -j XRAYUI
-A FORWARD -j XRAYUI
-A XRAYUI -m mark --mark 0x10000/0x10000 -j ACCEPT
-A XRAYUI -j RETURN
== iptables -t nat
-N XRAYUI
== iptables -t mangle
-N XRAYUI
-N DIVERT
-A PREROUTING -p tcp -m socket --transparent -j DIVERT
-A PREROUTING -j XRAYUI
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A XRAYUI -m addrtype --dst-type LOCAL -p udp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -p tcp --dport 12345 -j RETURN
-A XRAYUI -m addrtype --src-type LOCAL -j RETURN
-A XRAYUI -m addrtype --dst-type LOCAL -j RETURN
-A XRAYUI -p udp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -p tcp -m socket --transparent -j MARK --set-mark 0x10000/0x10000
-A XRAYUI -d 10.8.0.0/24 -j RETURN
-A XRAYUI -d 192.168.1.0/24 -j RETURN
-A XRAYUI -d 192.168.101.0/24 -j RETURN
-A XRAYUI -p udp -m multiport --dports 67,68,123,500,4500,4501,51820 -j RETURN
-A XRAYUI -d 224.0.0.0/4 -j RETURN
-A XRAYUI -d 239.0.0.0/8 -j RETURN
-A XRAYUI -m addrtype --dst-type BROADCAST -j RETURN
-A XRAYUI -m conntrack --ctstate DNAT -j RETURN
-A XRAYUI -d 203.0.113.10 -j RETURN
-A XRAYUI -d 192.0.2.3 -j RETURN
-A XRAYUI -s 10.8.0.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p tcp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 10.8.0.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.1.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A XRAYUI -s 192.168.101.0/24 -p udp -j TPROXY --on-port 12345 --tproxy-mark 0x10000/0x10000
-A DIVERT -j MARK --set-mark 0x10000/0x10000
-A DIVERT -j CONNMARK --save-mark --mask 0x10000
-A DIVERT -j ACCEPT
== ip -4 rule
fwmark 0x10000/0x10000 lookup 77
== ip -4 route table 77
local default dev lo proto static
192.0.2.0/24 dev eth0 proto kernel scope link src 192.0.2.3
10.8.0.0/24 dev tun21 proto kernel scope link src 10.8.0.1
127.0.0.0/8 dev lo scope link
192.168.1.0/24 dev br0 proto kernel scope link src 192.168.1.1
192.168.101.0/24 dev br1 proto kernel scope link src 192.168.101.1
== ipset
XRAYUI_BYPASS4 hash:net inet timeout 86400
XRAYUI_BYPASS4_NET hash:net inet
XRAYUI_PROXY4 hash:net inet timeout 86400
XRAYUI_PROXY4_NET hash:net inet
== events
dnsmasq_restart
== messages
WARN: No valid port found for inbound with tag tun-in. Skipping.
== stderr
"
`;
